SF Primes/src/objects/Account_ReLink_Detail__c.object
<CustomObject>
    <description>Detail of records moved during Account Relinks</description>
    <fields>
        <fullName>Account_ReLink__c</fullName>
        <label>Account Re-Link</label>
        <referenceTo>Account_ReLink__c</referenceTo>
        <relationshipLabel>Account Re-Link Details</relationshipLabel>
        <relationshipName>Account_ReLink_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Detail_Message__c</fullName>
        <label>Detail Message</label>
        <length>30000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Detail_Status__c</fullName>
        <label>Detail Status</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_ID__c</fullName>
        <label>Object ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_Link__c</fullName>
        <formula>HYPERLINK(&apos;/&apos;+Object_ID__c, Object_ID__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Object Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_Type__c</fullName>
        <label>Object Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Link__c</fullName>
        <formula>HYPERLINK(&apos;/&apos; &amp; Owner__c, Owner_Name__c, &apos;_blank&apos;)</formula>
        <label>Owner Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Name__c</fullName>
        <label>Owner Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Status__c</fullName>
        <label>Owner Status</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <label>Owner</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Replacement_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Replacement Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Account_Re_Link_Details1</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Account Re-Link Detail</label>
    <nameField>
        <displayFormat>ARLD-{000000}</displayFormat>
        <label>Account Re-Link Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Re-Link Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>